--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -3,19 +3,21 @@
 
 ## 1 - Início
 
-- [ ] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo). 
+- [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo). 
 
-- [ ] Valores do filtro "Autoria": "Própria" e "Outros".
+- [x] Valores do filtro "Autoria": "Própria" e "Outros".
   
-Substituir o rótulo "Uso de questões" por "Uso de Questões".
+- [x] Substituir o rótulo "Uso de questões" por "Uso de Questões".
   
-- [ ] Valores do filtro "Uso de Questões": "Novas" e "Usadas".
+- [x] Valores do filtro "Uso de Questões": "Novas" e "Usadas".
   
-- [ ] Substituir os rótulos: "Asserção e razão" por "Asserção e Razão", "Afirmação incompleta" por "Afirmação Incompleta", "Resposta múltipla" por "Resposta Múltipla" e "Resposta única" por "Resposta Única".
+- [ ] ~Substituir os rótulos: "Asserção e razão" por "Asserção e Razão", "Afirmação incompleta" por "Afirmação Incompleta", "Resposta múltipla" por "Resposta Múltipla" e "Resposta única" por "Resposta Única".~ (removido pois agora virou relação e será feito pelo backend)
   
-- [ ] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar".
+- [x] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - FRONTEND
+
+- [ ] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - BACKEND
   
-- [ ] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão".
+- [ ] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão". - BACKEND
   
 - [ ] Para usuários com o perfil "NDE" ou "Coordenador(a) de Curso", devem ser incluídos os filtros: "Professores" e "Eixos Curriculares" (assumindo que o curso já estará selecionado nas opções do usuário). Nesse caso, os filtros poderiam ser organizados da seguintes maneira:
   
@@ -45,19 +47,19 @@ Substituir o rótulo "Uso de questões" por "Uso de Questões".
 
 - [ ] Status
   
-- [ ] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo).
+- [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo).
 	
 - [ ] Na posição do filtro "Ordenar por", inserir o filtro  "Habilidade Cognitiva" e, em seguida, acrescentar o filtro "Grau de Dificuldade", que assumirá a posição do botão "Filtrar", assumindo a implementação da filtragem automática.
 	
-- [ ] Abaixo dos filtros, acrescentar as opções de ordenação da seguinte maneira:
+- [x] Abaixo dos filtros, acrescentar as opções de ordenação da seguinte maneira:
 	
 	  --------------------------------------------------------------------------------------------
-	  |	Atualização: ↑ ↓ | Grau de Dificuladade: ↑ ↓ | Habilidade Cognitiva: ↑ ↓ | Assunto:  ↑ ↓ |
+	  | Atualização: ↑ ↓ | Grau de Dificuladade: ↑ ↓ | Habilidade Cognitiva: ↑ ↓ | Assunto:  ↑ ↓ |
       --------------------------------------------------------------------------------------------	  
 	
-- [ ] Substituir o rótulo "Aguardando seu parecer" por "Aguardando seu Parecer", "Aguardando parecer do revisor" por "Aguardando Parecer do Revisor" e "Aguardando alterações" por "Pendentes de Alterações".
+- [x] Substituir o rótulo "Aguardando seu parecer" por "Aguardando seu Parecer", "Aguardando parecer do revisor" por "Aguardando Parecer do Revisor" e "Aguardando alterações" por "Pendentes de Alterações".
 
-- [ ] Se houver muitos rascunhos, o botão de "Adicionar nova questão" pode não ficar visível. Transferir a opção "Adicionar" para a primeira posição da lista de rascunhos.
+- [x] Se houver muitos rascunhos, o botão de "Adicionar nova questão" pode não ficar visível. Transferir a opção "Adicionar" para a primeira posição da lista de rascunhos.
   
 - [ ] Na tela que se abre quando se clica em uma questão nas seções "Aguardando seu Parecer", "Aguardando Parecer do Revisor", "Pendentes de Alterações", "Aprovadas" e "Cadastradas", substituir o rótulo "Histório de pareceres" por "Histórico de Pareceres" e "Responder parecer" por "Emitir/Comentar Parecer".
 	
