--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -45,7 +45,7 @@
 
 ## 2 - Questões: 
 
-- [ ] Status
+- [ ] Status (???)
   
 - [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo).
 	
@@ -61,22 +61,26 @@
 
 - [x] Se houver muitos rascunhos, o botão de "Adicionar nova questão" pode não ficar visível. Transferir a opção "Adicionar" para a primeira posição da lista de rascunhos.
   
-- [ ] Na tela que se abre quando se clica em uma questão nas seções "Aguardando seu Parecer", "Aguardando Parecer do Revisor", "Pendentes de Alterações", "Aprovadas" e "Cadastradas", substituir o rótulo "Histório de pareceres" por "Histórico de Pareceres" e "Responder parecer" por "Emitir/Comentar Parecer".
+- [x] Na tela que se abre quando se clica em uma questão nas seções "Aguardando seu Parecer", "Aguardando Parecer do Revisor", "Pendentes de Alterações", "Aprovadas" e "Cadastradas", substituir o rótulo "Histório de pareceres" por "Histórico de Pareceres" e "Responder parecer" por "Emitir/Comentar Parecer".
 	
-- [ ] Ao clicar em uma questão na seção "Rascunhos", abrir a mesma tela que se abre quando se clica em uma questão das outras seções, porém, com a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar" desabilitados.
+- [x] Ao clicar em uma questão na seção "Rascunhos", abrir a mesma tela que se abre quando se clica em uma questão das outras seções, porém, com a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar" desabilitados.
 	
-- [ ] Na tela que se abre após clicar em uma questão da seção "Aguardando seu Parecer", incluir as opções "Aprovada" e "Pendente de Alterações", mutuamente exclusivas. Além disso, manter apenas um botão com o rótulo "Enviar".
+- [x] Na tela que se abre após clicar em uma questão da seção "Aguardando seu Parecer", incluir as opções "Aprovada" e "Pendente de Alterações", mutuamente exclusivas. Além disso, manter apenas um botão com o rótulo "Enviar".
 
-- [ ] Na tela que se abre após clicar em uma questão da seção "Aguardando Parecer do Revisor", eliminar a mensagem "Essa questão está aguardando o parecer do revisor" e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar", ambos desabilitados. A aparência aqui é a mesma de quando é selecionada uma questão da seção "Rascunhos".
+- [x] Na tela que se abre após clicar em uma questão da seção "Aguardando Parecer do Revisor", eliminar a mensagem "Essa questão está aguardando o parecer do revisor" e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar", ambos desabilitados. A aparência aqui é a mesma de quando é selecionada uma questão da seção "Rascunhos".
 
-- [ ] Na tela que se abre após clicar em uma questão na seção "Aprovadas", eliminar a mensagem "Essa questão já foi aprovada, não é necessário enviar ou responder pareceres." e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" desabilitada. Substituir o rótulo "Registrar questão" do botão por "Cadastrar" e manter o tamanho do botão de acordo com o tamanho do rótulo.
+- [x] Na tela que se abre após clicar em uma questão na seção "Aprovadas", eliminar a mensagem "Essa questão já foi aprovada, não é necessário enviar ou responder pareceres." e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" desabilitada. Substituir o rótulo "Registrar questão" do botão por "Cadastrar" e manter o tamanho do botão de acordo com o tamanho do rótulo.
 		
-- [ ] Na tela que se abre após clicar em uma questão da seção "Cadastradas", inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar", ambos desabilitados. A aparência aqui é a mesma de quando é selecionada uma questão da seção "Rascunhos".
+- [x] Na tela que se abre após clicar em uma questão da seção "Cadastradas", inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar", ambos desabilitados. A aparência aqui é a mesma de quando é selecionada uma questão da seção "Rascunhos".
 	
-- [ ] Deve ser possível editar e apagar uma questão que esteja nas seções "Rascunhos", "Aguardando Parecer do Revisor", "Pendentes de Alterações" e "Aprovadas". Assim, ao se clicar em alguma questão dessas seções, na tela que se abre devem ser exibidos os ícones que representam as operações de edição e de exclusão no canto superior direito. No caso da exclusão, o usário deve confirmar a operação antes que seja efetivada.
+- [x] Deve ser possível editar e apagar uma questão que esteja nas seções "Rascunhos", "Aguardando Parecer do Revisor", "Pendentes de Alterações" e "Aprovadas". Assim, ao se clicar em alguma questão dessas seções, na tela que se abre devem ser exibidos os ícones que representam as operações de edição e de exclusão no canto superior direito. No caso da exclusão, o usário deve confirmar a operação antes que seja efetivada.
 	
-- [ ] Deve ser possível editar uma questão que esteja na seção "Aguardando seu Parecer". Assim, ao se clicar em alguma questão dessa seção, na tela que se abre deve ser exibido o ícone que representa a operação de edição no canto superior direito. Caso o revisor faça alguma alteração na questão, no parecer emitido deve ser acrescentada a mensagem "OBS.: o texto da questão foi editado pelo revisor".
+- [x] Deve ser possível editar uma questão que esteja na seção "Aguardando seu Parecer". Assim, ao se clicar em alguma questão dessa seção, na tela que se abre deve ser exibido o ícone que representa a operação de edição no canto superior direito. Caso o revisor faça alguma alteração na questão, no parecer emitido deve ser acrescentada a mensagem "OBS.: o texto da questão foi editado pelo revisor".
+
+- [ ] Se um revisor editar uma questão, deverá cadastrar um parecer dizendo que o revisor editou. (BACKEND)
 	
-- [ ] Ao clicar em alguma questão de alguma seção, na tela que se abre, substituir o rótulo "Revisar" pelo rótulo correspondente à seção daquela questão.
+- [x] Ao clicar em alguma questão de alguma seção, na tela que se abre, substituir o rótulo "Revisar" pelo rótulo correspondente à seção daquela questão.
 
 - [ ] Ao clicar em alguma questão de alguma seção, na tela que se abre, acrescentar o atributo "Autor", substituir o formato da data de atualização para dd/mm/aa, o rótulo "Habilidade cognitiva" por "Habilidade Cognitiva" e "Eixo de formação" por "Eixo de Formação".
+
+- [x] Colocar relação created_by no question
