--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -81,6 +81,6 @@
 	
 - [x] Ao clicar em alguma questão de alguma seção, na tela que se abre, substituir o rótulo "Revisar" pelo rótulo correspondente à seção daquela questão.
 
-- [ ] Ao clicar em alguma questão de alguma seção, na tela que se abre, acrescentar o atributo "Autor", substituir o formato da data de atualização para dd/mm/aa, o rótulo "Habilidade cognitiva" por "Habilidade Cognitiva" e "Eixo de formação" por "Eixo de Formação".
+- [x] Ao clicar em alguma questão de alguma seção, na tela que se abre, acrescentar o atributo "Autor", substituir o formato da data de atualização para dd/mm/aa, o rótulo "Habilidade cognitiva" por "Habilidade Cognitiva" e "Eixo de formação" por "Eixo de Formação".
 
 - [x] Colocar relação created_by no question
