--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -1,24 +1,17 @@
-
 # ALTERAÇÕES NO SISTEMA
 
-## 1 - Início
+## 1 - BACK-END
 
-- [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo). 
-
-- [x] Valores do filtro "Autoria": "Própria" e "Outros".
-  
-- [x] Substituir o rótulo "Uso de questões" por "Uso de Questões".
-  
-- [x] Valores do filtro "Uso de Questões": "Novas" e "Usadas".
-  
-- [ ] ~Substituir os rótulos: "Asserção e razão" por "Asserção e Razão", "Afirmação incompleta" por "Afirmação Incompleta", "Resposta múltipla" por "Resposta Múltipla" e "Resposta única" por "Resposta Única".~ (removido pois agora virou relação e será feito pelo backend)
-  
-- [x] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - FRONTEND
-
-- [ ] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - BACKEND
-  
 - [ ] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão". - BACKEND
-  
+      
+- [ ] Alterar as enumerações que estavam como 'string' para 'int' (BACKEND)
+
+- [ ] Transformar da enumeração de tipo para um CRUD (BACKEND)
+
+- [ ] Se um revisor editar uma questão, deverá cadastrar um parecer dizendo que o revisor editou. (BACKEND)
+
+- [ ] Realizar um breve estudo sobre a substituição da lógica principal de queries Raw SQL para Stored Procedures (BACKEND | EXPERIMENTO)
+
 - [ ] Para usuários com o perfil "NDE" ou "Coordenador(a) de Curso", devem ser incluídos os filtros: "Professores" e "Eixos Curriculares" (assumindo que o curso já estará selecionado nas opções do usuário). Nesse caso, os filtros poderiam ser organizados da seguintes maneira:
   
        --------------------------------------------------------------------
@@ -43,20 +36,28 @@
 	   | Ano Final   | Uso de Questões | Cursos              | Assuntos           |             |
        ------------------------------------------------------------------------------------------
 
-## 2 - Questões: 
+- [ ] ~Substituir os rótulos: "Asserção e razão" por "Asserção e Razão", "Afirmação incompleta" por "Afirmação Incompleta", "Resposta múltipla" por "Resposta Múltipla" e "Resposta única" por "Resposta Única".~ (removido pois agora virou relação e será feito pelo BACKEND - voltou para o Backlog)
+
+- [ ] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - BACKEND
+
+---
+
+## 2 - FRONT-END: 
 
 - [ ] Status (???)
-  
-- [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo).
-	
+  	
 - [ ] Na posição do filtro "Ordenar por", inserir o filtro  "Habilidade Cognitiva" e, em seguida, acrescentar o filtro "Grau de Dificuldade", que assumirá a posição do botão "Filtrar", assumindo a implementação da filtragem automática.
-	
-- [x] Abaixo dos filtros, acrescentar as opções de ordenação da seguinte maneira:
-	
+		
 	  --------------------------------------------------------------------------------------------
 	  | Atualização: ↑ ↓ | Grau de Dificuladade: ↑ ↓ | Habilidade Cognitiva: ↑ ↓ | Assunto:  ↑ ↓ |
       --------------------------------------------------------------------------------------------	  
 	
+- [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo). 
+
+- [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo).
+
+- [x] Abaixo dos filtros, acrescentar as opções de ordenação da seguinte maneira:
+
 - [x] Substituir o rótulo "Aguardando seu parecer" por "Aguardando seu Parecer", "Aguardando parecer do revisor" por "Aguardando Parecer do Revisor" e "Aguardando alterações" por "Pendentes de Alterações".
 
 - [x] Se houver muitos rascunhos, o botão de "Adicionar nova questão" pode não ficar visível. Transferir a opção "Adicionar" para a primeira posição da lista de rascunhos.
@@ -76,11 +77,18 @@
 - [x] Deve ser possível editar e apagar uma questão que esteja nas seções "Rascunhos", "Aguardando Parecer do Revisor", "Pendentes de Alterações" e "Aprovadas". Assim, ao se clicar em alguma questão dessas seções, na tela que se abre devem ser exibidos os ícones que representam as operações de edição e de exclusão no canto superior direito. No caso da exclusão, o usário deve confirmar a operação antes que seja efetivada.
 	
 - [x] Deve ser possível editar uma questão que esteja na seção "Aguardando seu Parecer". Assim, ao se clicar em alguma questão dessa seção, na tela que se abre deve ser exibido o ícone que representa a operação de edição no canto superior direito. Caso o revisor faça alguma alteração na questão, no parecer emitido deve ser acrescentada a mensagem "OBS.: o texto da questão foi editado pelo revisor".
-
-- [ ] Se um revisor editar uma questão, deverá cadastrar um parecer dizendo que o revisor editou. (BACKEND)
 	
 - [x] Ao clicar em alguma questão de alguma seção, na tela que se abre, substituir o rótulo "Revisar" pelo rótulo correspondente à seção daquela questão.
 
 - [x] Ao clicar em alguma questão de alguma seção, na tela que se abre, acrescentar o atributo "Autor", substituir o formato da data de atualização para dd/mm/aa, o rótulo "Habilidade cognitiva" por "Habilidade Cognitiva" e "Eixo de formação" por "Eixo de Formação".
 
 - [x] Colocar relação created_by no question
+
+- [x] Valores do filtro "Autoria": "Própria" e "Outros".
+  
+- [x] Substituir o rótulo "Uso de questões" por "Uso de Questões".
+  
+- [x] Valores do filtro "Uso de Questões": "Novas" e "Usadas".
+  
+- [x] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - FRONTEND
+
