--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -4,10 +4,6 @@
 
 - [ ] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão". - BACKEND
       
-- [ ] Alterar as enumerações que estavam como 'string' para 'int' (BACKEND)
-
-- [ ] Transformar da enumeração de tipo para um CRUD (BACKEND)
-
 - [ ] Se um revisor editar uma questão, deverá cadastrar um parecer dizendo que o revisor editou. (BACKEND)
 
 - [ ] Realizar um breve estudo sobre a substituição da lógica principal de queries Raw SQL para Stored Procedures (BACKEND | EXPERIMENTO)
@@ -36,10 +32,16 @@
 	   | Ano Final   | Uso de Questões | Cursos              | Assuntos           |             |
        ------------------------------------------------------------------------------------------
 
-- [ ] ~Substituir os rótulos: "Asserção e razão" por "Asserção e Razão", "Afirmação incompleta" por "Afirmação Incompleta", "Resposta múltipla" por "Resposta Múltipla" e "Resposta única" por "Resposta Única".~ (removido pois agora virou relação e será feito pelo BACKEND - voltou para o Backlog)
 
 - [ ] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - BACKEND
 
+- [x] Alterar as enumerações que estavam como 'string' para 'int' (BACKEND)
+
+- [x] Substituir os rótulos: "Asserção e razão" por "Asserção e Razão", "Afirmação incompleta" por "Afirmação Incompleta", "Resposta múltipla" por "Resposta Múltipla" e "Resposta única" por "Resposta Única". (removido pois agora virou relação e será feito pelo BACKEND - voltou para o Backlog)
+
+- [x] CRUD de cursos e relação com as questões 
+
+- [x] Transformar da enumeração de tipo para um CRUD (BACKEND)
 ---
 
 ## 2 - FRONT-END 
