--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -3,6 +3,16 @@
 ## 1 - BACK-END
 
 - [ ] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão". - BACKEND
+
+- [ ] Novos filtros para o question/my_questions: bloom_taxonomy (1,2,3,4) e difficulty (0,1,2)
+
+- [ ] Ordenação para o question/my_questions: updated_at, difficulty, bloom_taxonomy, subject. enviado no campo order_by.
+
+- [ ] Ordenação para o question/my_questions: desc, asc. enviado no campo order_direction.
+
+- [ ] Não enviar campos em null na request de dash (propriedade type_chart)
+
+- [ ] Relação created_by na request de question by id (só preciso do nome)
       
 - [ ] Se um revisor editar uma questão, deverá cadastrar um parecer dizendo que o revisor editou. (BACKEND)
 
