--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -10,7 +10,7 @@
 
 - [ ] Ordenação para o question/my_questions: desc, asc. enviado no campo order_direction.
 
-- [ ] Não enviar campos em null na request de dash (propriedade type_chart)
+- [x] Não enviar campos em null na request de dash (propriedade type_chart)
 
 - [ ] Relação created_by na request de question by id (só preciso do nome)
       
@@ -43,7 +43,7 @@
        ------------------------------------------------------------------------------------------
 
 
-- [ ] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - BACKEND
+- [X] A ordem dos rótulos de Habilidade Cognitiva, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Recordar", "Compreender", "Aplicar", "Analisar", "Avaliar" e "Criar". - BACKEND
 
 - [x] Alterar as enumerações que estavam como 'string' para 'int' (BACKEND)
 
