--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -2,7 +2,7 @@
 
 ## 1 - BACK-END
 
-- [ ] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão". - BACKEND
+- [x] A ordem dos rótulos de Tipo, tanto no gráfico de rosca quanto no gráfico de barras, deve ser: "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão". - BACKEND
 
 - [ ] Novos filtros para o question/my_questions: bloom_taxonomy (1,2,3,4) e difficulty (0,1,2)
 
