--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -12,7 +12,7 @@
 
 - [x] Não enviar campos em null na request de dash (propriedade type_chart)
 
-- [ ] Relação created_by na request de question by id (só preciso do nome)
+- [X] Relação created_by na request de question by id (só preciso do nome)
       
 - [ ] Se um revisor editar uma questão, deverá cadastrar um parecer dizendo que o revisor editou. (BACKEND)
 
