--- a/02-08-2024.md
+++ b/02-08-2024.md
@@ -55,10 +55,8 @@
 ---
 
 ## 2 - FRONT-END 
-
-- [ ] Status (???)
   	
-- [ ] Na posição do filtro "Ordenar por", inserir o filtro  "Habilidade Cognitiva" e, em seguida, acrescentar o filtro "Grau de Dificuldade", que assumirá a posição do botão "Filtrar", assumindo a implementação da filtragem automática.
+- [x] Na posição do filtro "Ordenar por", inserir o filtro  "Habilidade Cognitiva" e, em seguida, acrescentar o filtro "Grau de Dificuldade", que assumirá a posição do botão "Filtrar", assumindo a implementação da filtragem automática.
 
 - [x] Filtragem automática à medida que os filtros vão sendo marcados/desmarcados sem a necessidade de clicar no botão "Filtrar" (atraso de 1 segundo). 
 
