--- a/05-10-2024.md
+++ b/05-10-2024.md
@@ -4,7 +4,7 @@ ALTERAÇÕES NO SISTEMA
 ---------------------
 
 1 - Usuários:
-- [ ] A janela que aparece quando o usuário seleciona a opção "Alterar Curso" deve aparecer quando o usuário selecionar "Meu Perfil" e a opção "Alterar Curso" deve ser eliminada.
+- [x] A janela que aparece quando o usuário seleciona a opção "Alterar Curso" deve aparecer quando o usuário selecionar "Meu Perfil" e a opção "Alterar Curso" deve ser eliminada.
   
 - [ ] As opções de perfis a serem carregadas para o usuário corrente devem ser apenas aquelas previamente cadastradas pelo administrador para aquele usuário. 
 
