--- a/05-10-2024.md
+++ b/05-10-2024.md
@@ -40,41 +40,41 @@ ALTERAÇÕES NO SISTEMA
 
   * Status
 
-- [ ] Substituir o rótulo "Aguardando seu Parecer" por "Aguardando meu Parecer".
+- [x] Substituir o rótulo "Aguardando seu Parecer" por "Aguardando meu Parecer".
 
-- [ ] Na tela que se abre após clicar em uma questão da seção "Aguardando seu Parecer":
+- [x] Na tela que se abre após clicar em uma questão da seção "Aguardando seu Parecer":
 		- substituir o título "Aguardando Revisão" por "Aguardando Parecer do Revisor";
 		(OK) - incluir as opções "Aprovada" e "Pendente de Alterações", mutuamente exclusivas;
 		- posicionar a opção "Pendente de Alterações" abaixo da opção "Aprovada";
 		(OK) - manter apenas um botão com o rótulo "Enviar".
 		
-- [ ] Na tela que se abre após clicar em uma questão da seção "Aguardando Parecer do Revisor":
+- [x] Na tela que se abre após clicar em uma questão da seção "Aguardando Parecer do Revisor":
 		- substituir o título "Aguardando Revisão" por "Aguardando Parecer do Revisor".
 		(OK) - eliminar a mensagem "Essa questão está aguardando o parecer do revisor" e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" e o botão "Enviar", ambos desabilitados. A aparência aqui é a mesma de quando é selecionada uma questão da seção "Rascunhos".
 	
-- [ ] Na tela que se abre após clicar em uma questão da seção "Pendente de Alterações", substituir o título "Com Alterações Pendentes" por "Pendente de Alterações".
+- [x] Na tela que se abre após clicar em uma questão da seção "Pendente de Alterações", substituir o título "Com Alterações Pendentes" por "Pendente de Alterações".
 	
-- [ ] (O BOTÃO DE CADASTRO DEVE TER O TAMANHO DO RÓRULO) * Na tela que se abre após clicar em uma questão na seção "Aprovadas", eliminar a mensagem "Essa questão já foi aprovada, não é necessário enviar ou responder pareceres." e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" desabilitada. Substituir o rótulo "Registrar questão" do botão por "Cadastrar" e manter o tamanho do botão de acordo com o tamanho do rótulo.
+- [x] (O BOTÃO DE CADASTRO DEVE TER O TAMANHO DO RÓRULO) * Na tela que se abre após clicar em uma questão na seção "Aprovadas", eliminar a mensagem "Essa questão já foi aprovada, não é necessário enviar ou responder pareceres." e inserir a caixa de texto associada ao item "Emitir/Comentar Parecer" desabilitada. Substituir o rótulo "Registrar questão" do botão por "Cadastrar" e manter o tamanho do botão de acordo com o tamanho do rótulo.
 		
 - [ ] (HÁ QUESTÕES APROVADAS EM QUE AS OPÇÕES DE EDIÇÃO E EXCLUSÃO NÃO ESTÃO APARECENDO) * Deve ser possível editar e apagar uma questão que esteja nas seções "Rascunhos", "Aguardando Parecer do Revisor", "Pendentes de Alterações" e "Aprovadas". Assim, ao se clicar em alguma questão dessas seções, na tela que se abre devem ser exibidos os ícones que representam as operações de edição e de exclusão no canto superior direito. No caso da exclusão, o usário deve confirmar a operação antes que seja efetivada. LEMBRETE: Nas seções "Rascunhos", "Aguardando Parecer do Revisor", "Pendentes de Alterações" e "Aprovadas" devem aparecer apenas questões criadas pelo usuário corrente.
 		
-- [ ] (A OPÇÃO DE EXCLUSÃO ESTÁ APARECENDO) * Deve ser possível editar uma questão que esteja na seção "Aguardando meu Parecer", mas não deve ser possível excluir. Assim, ao se clicar em alguma questão dessa seção, na tela que se abre deve ser exibido apenas o ícone que representa a operação de edição no canto superior direito. Caso o revisor faça alguma alteração na questão, no parecer emitido deve ser acrescentada a mensagem "OBS.: o texto da questão foi editado pelo revisor". LEMBRETE: Na seção "Aguardando meu Parecer" devem aparecer apenas questões de outros usuários que selecioanaram o usuário corrente como revisor.
+- [x] (A OPÇÃO DE EXCLUSÃO ESTÁ APARECENDO) * Deve ser possível editar uma questão que esteja na seção "Aguardando meu Parecer", mas não deve ser possível excluir. Assim, ao se clicar em alguma questão dessa seção, na tela que se abre deve ser exibido apenas o ícone que representa a operação de edição no canto superior direito. Caso o revisor faça alguma alteração na questão, no parecer emitido deve ser acrescentada a mensagem "OBS.: o texto da questão foi editado pelo revisor". LEMBRETE: Na seção "Aguardando meu Parecer" devem aparecer apenas questões de outros usuários que selecioanaram o usuário corrente como revisor.
 	
-- [ ] (FALTA A MODIFICAÇÃO NO FORMATO DA DATA) * Ao clicar em alguma questão de alguma seção, na tela que se abre, acrescentar o atributo "Autor", substituir o formato da data de atualização para dd/mm/aa, o rótulo "Habilidade cognitiva" por "Habilidade Cognitiva" e "Eixo de formação" por "Eixo de Formação".
+- [x] (FALTA A MODIFICAÇÃO NO FORMATO DA DATA) * Ao clicar em alguma questão de alguma seção, na tela que se abre, acrescentar o atributo "Autor", substituir o formato da data de atualização para dd/mm/aa, o rótulo "Habilidade cognitiva" por "Habilidade Cognitiva" e "Eixo de formação" por "Eixo de Formação".
 
   * Criação/Edição
   
-- [ ] Ao adicionar uma questão, o ID dessa questão que começará a ser construída deve aparecer no cabeçalho.
+- [x] Ao adicionar uma questão, o ID dessa questão que começará a ser construída deve aparecer no cabeçalho. (só dá para fazer na edição pq antes de salvar pela primeira vez não possui ID)
   
-- [ ] Substituir o rótulo "Salvar como rascunho" do botão por "Salvar Rascunho".
+- [x] Substituir o rótulo "Salvar como rascunho" do botão por "Salvar Rascunho".
 	
-- [ ] Incluir o botão "Salvar Rascunho" em todas as etapas da criação/edição da questão.
+- [x] Incluir o botão "Salvar Rascunho" em todas as etapas da criação/edição da questão.
 	
-- [ ] Substituir o rótulo "Próximo" do botão por "Avançar".
+- [x] Substituir o rótulo "Próximo" do botão por "Avançar".
 	
 - [ ] Os valores do atributo "Tipo" devem ser apenas "Resposta Única", "Afirmação Incompleta", "Interpretação", "Resposta Múltipla" e "Asserção e Razão", da mesma forma como aparece nos gráficos da seção de "Início".
 	
-- [ ] As opções do atributo "Assunto" não estão cadastradas e vale destacar que quando um assunto é selecionado, o valor do atributo "Eixo de Formação" deve ser preenchido automaticamente. 
-	
-- [ ] Questões criadas estão sendo transferidas para a seção "Aguardando meu Parecer", mas deveriam ser transferidas para a seção "Aguardando Parecer do Revisor".
+- [x] As opções do atributo "Assunto" não estão cadastradas e vale destacar que quando um assunto é selecionado, o valor do atributo "Eixo de Formação" deve ser preenchido automaticamente. (adicionado crud para cadastro)
+
+- [x] Questões criadas estão sendo transferidas para a seção "Aguardando meu Parecer", mas deveriam ser transferidas para a seção "Aguardando Parecer do Revisor".
 		
